[package]
name = "tavla"
version = "0.1.0"
edition = "2021"
description = "Backgammon simulation library"
readme = "README.md"
repository = "https://github.com/GiftofHermes/tavla"
license = "Apache-2.0"
keywords = ["backgammon", "simulation", "reinforcement", "environment"]
categories = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
